Atualizações no projeto

--- a/destinos.html
+++ b/destinos.html
@@ -14,27 +14,26 @@
 
 <body>
   <!-- Navbar -->
- <header class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top navbar-principal">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">
-        <img src="img/logo.img.jpg" alt="GeoRoteiro" class="logo-navbar">
-      </a>
+ <header>
+    
+    <!--Logo-->
+    <div class="logo">
+      <img src="img/logo.png" alt="">
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto nav-links">
-          <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-          <li class="nav-item"><a class="nav-link active" href="destinos.html">Destinos</a></li>
-          <li class="nav-item"><a class="nav-link" href="roteiros.html">Roteiros</a></li>
-          <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
-          <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre Nós</a></li>
-        </ul>
-      </div>
     </div>
-</header>
+
+  
+
+    <!-- Menu de navegação -->
+    <nav class="menu">
+      <a href="index.html">Início</a>
+      <a href="#">Destinos</a>
+      
+      <a href="contato/contato.html">Contato</a>
+      <a href="sobrenos/sobrenos.html">Sobre Nós</a>
+    </nav>
+
+  </header>
 
 
   <!-- Conteúdo Principal -->
@@ -49,7 +48,9 @@
           <div class="card-body text-center">
             <h5 class="texto-estados">Pernambuco</h5>
             <p class="card-text">Descubra as belezas do Nordeste, com praias paradisíacas e cultura vibrante.</p>
+            <a href="pern.html">
             <button class="btn btn-success">Ver mais</button>
+            </a>
           </div>
         </div>
       </div>
@@ -61,7 +62,9 @@
           <div class="card-body text-center">
             <h5 class="texto-estados">Minas Gerais</h5>
             <p class="card-text">História, culinária e paisagens de tirar o fôlego no coração do Brasil.</p>
+            <a href="minas.html">
             <button class="btn btn-success">Ver mais</button>
+            </a>
           </div>
         </div>
       </div>
@@ -73,7 +76,9 @@
           <div class="card-body text-center">
             <h5 class="texto-estados">Amazonas</h5>
             <p class="card-text">Explore a floresta amazônica e viva uma experiência única na natureza.</p>
+            <a href="am.html">
             <button class="btn btn-success">Ver mais</button>
+            </a>
           </div>
         </div>
       </div>
@@ -85,7 +90,10 @@
           <div class="card-body text-center">
             <h5 class="texto-estados">Santa Catarina</h5>
             <p class="card-text">Praias, montanhas e cultura encantadora te esperam no sul do Brasil.</p>
+            <a href="sc.html">
             <button class="btn btn-success">Ver mais</button>
+            </a>
+
           </div>
         </div>
       </div>
