--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Menu de navegação -->
     <nav class="menu">
       <a href="index.html">Início</a>
-      <a href="#">Destinos</a>
+      <a href="destinos.html">Destinos</a>
       
       <a href="contato/contato.html">Contato</a>
       <a href="sobrenos/sobrenos.html">Sobre Nós</a>
@@ -56,7 +56,11 @@
        <h3 class="textpt6">✅Encontre o roteiro perfeito para a sua próxima viagem.</h3>
        <h3 class="textpt7">✅Compartilhe suas aventuras e inspire outros viajantes.</h3>
        <br>
+       <a href="destinos.html">
        <button class="botao1">Comece A Planejar</button>
+       </a>
+
+
   </div>
 </div>
 
