--- a/sobrenos/sobrenos.html
+++ b/sobrenos/sobrenos.html
@@ -17,7 +17,7 @@
 
     <nav class="menu">
       <a href="index.html">Início</a>
-      <a href="#">Destinos</a>
+      <a href="destinos.html">Destinos</a>
       <a href="contato/contato.html">Contato</a>
       <a href="sobrenos.html" class="ativo">Sobre Nós</a>
     </nav>
