--- a/contato.html
+++ b/contato.html
@@ -22,10 +22,10 @@
      <!-- Menu de navegação -->
      <nav class="menu">
       <a href="index.html">Início</a>
-      <a href="#">Destinos</a>
+      <a href="destinos.html">Destinos</a>
       
-      <a href="contato/contato.html">Contato</a>
-      <a href="sobrenos/sobrenos.html">Sobre Nós</a>
+      <a href="contato.html">Contato</a>
+      <a href="sobrenos.html">Sobre Nós</a>
     </nav>
 
   </header>
