--- a/sobrenos.html
+++ b/sobrenos.html
@@ -18,7 +18,7 @@
     <nav class="menu">
       <a href="index.html">Início</a>
       <a href="destinos.html">Destinos</a>
-      <a href="contato/contato.html">Contato</a>
+      <a href="contato.html">Contato</a>
       <a href="sobrenos.html" class="ativo">Sobre Nós</a>
     </nav>
   </header>
